syntax = "proto3";
package api_def;
option go_package = "/api_def";
import "kk_etcd_models/pb_server_kk_etcd.proto";

//list server
message ServerList {
  message Input {
    string  ServerType = 1;
    string  ServerName = 2;
  }

  message Output {
    kk_etcd_models.PBListServer ServerList = 1;
  }
}